--- a/seasonal_cycle_filtering_FFT.ipynb
+++ b/seasonal_cycle_filtering_FFT.ipynb
@@ -488,7 +488,9 @@
         "# Convert DataArray to pandas DatetimeIndex\n",
         "dates = pd.to_datetime(data['time'].values)\n",
         "\n",
-        "# Create the index, year, month, and day array\n",
+        "# Create the index, month, day, and hour array\n",
+        "# Perhaps -- Create the index, year, month, and day array\n",
+        "# Perhaps -- Create the index, year, month, day, and hour array\n",
         "TIME = np.array([[i + 1, date.month, date.day, date.hour] for i, date in enumerate(dates)])\n",
         "\n",
         "print(np.shape(X))\n",
@@ -517,7 +519,7 @@
         "plt.ylabel('Temperature (K)');\n",
         "plt.xlabel('Hour of Day');\n",
         "plt.xlim(-1,25);\n",
-        "plt.title('Daily Climatological Temperature at Lat {}°, Lon {}°, Lev {}'.format(lat, lon, lev));\n"
+        "plt.title('Daily Climatological Temperature at Lat {}°, Lon {}°, Lev {}'.format(lat, lon, lev));"
       ],
       "metadata": {
         "colab": {
@@ -525,9 +527,9 @@
           "height": 1000
         },
         "id": "b6BKgC-RadRi",
-        "outputId": "947d20e4-bb12-4922-cb38-fd8f75a34a0b"
+        "outputId": "bd6620ba-7697-4d51-cfba-0587da72b423"
       },
-      "execution_count": 85,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,9 +615,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 472
         },
-        "outputId": "cfc13edf-7ba7-436d-b636-0ebd7f89611f"
+        "outputId": "5a22e7c3-34d2-494e-a383-10aa9e527133"
       },
-      "execution_count": 86,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "display_data",
@@ -668,9 +670,9 @@
           "height": 472
         },
         "id": "9kxsHRsWI2MW",
-        "outputId": "27a9a996-884d-4f14-d454-05ac40c56e18"
+        "outputId": "85e53f62-b473-4454-fe86-3480b03f2086"
       },
-      "execution_count": 87,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "display_data",
@@ -708,9 +710,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MhPwu0JYI5bd",
-        "outputId": "580e5c90-471b-478a-bbea-f0d3c2a5e312"
+        "outputId": "9bb6ae6a-2878-421e-8810-2cbc934044b4"
       },
-      "execution_count": 88,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "stream",
@@ -741,9 +743,9 @@
           "height": 485
         },
         "id": "mdq4y7r6I_S4",
-        "outputId": "85160f61-f9bb-4e3d-80f3-83abafbb37f7"
+        "outputId": "127e9787-c1b5-438d-b7ee-f7a32bbd3591"
       },
-      "execution_count": 89,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
@@ -784,7 +786,7 @@
       "metadata": {
         "id": "mi9mVwi9JpcE"
       },
-      "execution_count": 90,
+      "execution_count": 98,
       "outputs": []
     },
     {
@@ -817,9 +819,9 @@
           "height": 807
         },
         "id": "5-DJqExaJrzY",
-        "outputId": "41f5ece5-d48e-41d7-b89b-52d0e2bcd99f"
+        "outputId": "1958a22f-8fed-487a-91f4-7d218906bf8c"
       },
-      "execution_count": 91,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "display_data",
@@ -862,9 +864,9 @@
           "height": 807
         },
         "id": "3FD1F_8kJ-sx",
-        "outputId": "418f2756-691a-4035-dfa0-8262b8dcb9c8"
+        "outputId": "8305e04a-eb28-4206-a2a7-ebe0674f91ed"
       },
-      "execution_count": 92,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "display_data",
@@ -884,7 +886,7 @@
       "metadata": {
         "id": "sMlsr2BpIxf6"
       },
-      "execution_count": 92,
+      "execution_count": 100,
       "outputs": []
     }
   ],
